some updated stuff